--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                                                             <rs-module id="rev_slider_1_1" style="" data-version="6.3.6">
                                                                 <rs-slides>
                                                                     <rs-slide data-key="rs-6" data-title="Slide" data-anim="ei:d;eo:d;s:d;r:default;t:slidingoverlayhorizontal;sl:d;">
-                                                                        <img decoding="async" src="Tulip_Cam011.jpg" title="Home" data-parallax="1" class="rev-slidebg" data-no-retina>
+                                                                        <img decoding="async" src="Tulip_Cam011.jpg" title="Home" data-parallax="1" class="rev-slidebg" data-no-retina style="opacity:0.1;">
                                                                         <!--
  -->
                                                                         <rs-group id="slider-1-slide-6-layer-1" data-type="group" data-xy="xo:15px;y:m;yo:40px,0,0,0;" data-text="l:22;a:inherit;" data-dim="w:1170px,680px,580px,450px;h:425px,425px,367px,308px;"
