--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                                                                             <rs-layer id="slider-1-slide-10-layer-9" data-type="text" data-xy="x:r,c,c,c;y:b;yo:0,0,0,75px;" data-text="l:22;a:inherit;" data-rsp_o="off" data-rsp_bd="off" data-frame_0="y:100%;"
                                                                             data-frame_0_mask="u:t;y:100%;" data-frame_1="e:easeOutCirc;st:3000;sp:1200;sR:2990;" data-frame_1_mask="u:t;" data-frame_999="o:0;e:easeOutCirc;st:w;sp:600;sR:8990;" style="z-index:14;font-family:Open Sans;">
                                                                                 <div class="slider-button">
-                                                                                    <div class="slider-button1">Enscape Project</a></div>
+                                                                                    <div class="slider-button1" >Enscape Project</a></div>
                                                                                     <div class="slider-button2 active">Mumbai</a></div>
                                                                                 </div>
                                                                             </rs-layer>
@@ -1020,7 +1020,9 @@ Analysis
                                                                     <div class="item-holder">
                                                                         <h3 class="item-title"> <a href="https://demo.casethemes.net/archio/portfolio/fantastic-interior/"> JOSHI JI <br />interior </a></h3>
                                                                         <div class="item-except">Lorem ipsum dolor sit amet, Deora consectetur adipisicing.</div>
-                                                                        <div class="item-category"><a href="https://demo.casethemes.net/archio/portfolio-category/hotel/" rel="tag">Residential</a></div>
+                                                                        <div class="item-category"><a href="https://demo.casethemes.net/archio/portfolio-category/hotel/" rel="tag" style="
+    color: #E8DED4;
+">Residence</a></div>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -1037,7 +1039,9 @@ Analysis
                                                                     <div class="item-holder">
                                                                         <h3 class="item-title"> <a href="https://demo.casethemes.net/archio/portfolio/mendella-exterior/"> DR AJAY JAIN <br />Elevation </a></h3>
                                                                         <div class="item-except">Lorem ipsum dolor sit amet, Deora consectetur adipisicing.</div>
-                                                                        <div class="item-category"><a href="https://demo.casethemes.net/archio/portfolio-category/hall/" rel="tag">Hall</a></div>
+                                                                        <div class="item-category"><a href="https://demo.casethemes.net/archio/portfolio-category/hall/" rel="tag" style="
+    color: #E8DED4;
+">Interior</a></div>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -1054,7 +1058,9 @@ Analysis
                                                                     <div class="item-holder">
                                                                         <h3 class="item-title"> <a href="https://demo.casethemes.net/archio/portfolio/scott-villa-du/"> Natani <br />Ji </a></h3>
                                                                         <div class="item-except">Lorem ipsum dolor sit amet, Deora consectetur adipisicing.</div>
-                                                                        <div class="item-category"><a href="https://demo.casethemes.net/archio/portfolio-category/residence/" rel="tag">Residence</a></div>
+                                                                        <div class="item-category"><a href="https://demo.casethemes.net/archio/portfolio-category/residence/" rel="tag" style="
+    color: #E8DED4;
+">Residence</a></div>
                                                                     </div>
                                                                 </div>
                                                             </div>
