--- a/index.html
+++ b/index.html
@@ -921,12 +921,12 @@ Analysis
       <img src="Tulip_Cam008.jpg" alt="Service 1">
       <img src="services3.jpg" alt="Service 2">
       <img src="services2.jpg" alt="Service 3">
-      <img src="Tulip_Cam008.jpg" alt="Service 1">
-      <img src="services3.jpg" alt="Service 2">
-      <img src="services2.jpg" alt="Service 3">
-      <img src="Tulip_Cam008.jpg" alt="Service 1">
-      <img src="services3.jpg" alt="Service 2">
-      <img src="services2.jpg" alt="Service 3">
+      <img src="healthcare.jpg" alt="Service 4">
+      <img src="kid.jpg" alt="Service 2">
+      <img src="arial.jpg" alt="Service 3">
+      <img src="veenet.jpg" alt="Service 1">
+      <img src="comm.jpg" alt="Service 2">
+      <img src="villa.jpg" alt="Service 3">
             <!-- <img src="Tulip_Cam008.jpg" alt="Service 1">
       <img src="services3.jpg" alt="Service 2">
       <img src="services2.jpg" alt="Service 3"> -->
